tests/integration/screens/snapshots/r#mod__integration__screens__typing_screen_test__typing_screen_esc_during_typing.snap
---
source: tests/integration/screens/typing_screen_test.rs
expression: output
---
                                                                                                                        
 ┌Challenge───────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ test.rs:1-3 [Rust] [Easy]                                                                                          │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
 ┌Code────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │                                                                                                                    │ 
 │    1 │ fn main() {↵                                                                                                │ 
 │    2 │     println!("Hello");↵                                                                                     │ 
 │    3 │ }↵                                                                                                          │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                 ┌Game Options────────────────────────────────────┐                                 │ 
 │                                 │                                                │                                 │ 
 │                                 │                Choose an option:               │                                 │ 
 │                                 │                                                │                                 │ 
 │                                 │             [S] Skip challenge (3)             │                                 │ 
 │                                 │                 [Q] Quit (fail)                │                                 │ 
 │                                 │               [ESC] Back to game               │                                 │ 
 │                                 │                                                │                                 │ 
 │                                 └────────────────────────────────────────────────┘                                 │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
 ┌Metrics─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ WPM: 120 | CPM: 600 | Accuracy: 100% | Mistakes: 0 | Streak: 0 | Time: 0s | Skips: 3                               │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
 ┌Progress────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │███                                                      3%                                                         │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
 [ESC] Options
